--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "eleventy --serve"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "@11ty/eleventy": "^1.0.1"
   },
   "dependencies": {
-    "@notionhq/client": "^2.0.0"
+    "@notionhq/client": "^2.0.0",
+    "dotenv": "^16.0.1"
   }
 }
