--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/nelioyann/front-stories#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.1"
+    "@11ty/eleventy": "^2.0.0-canary.12"
   },
   "dependencies": {
     "@notionhq/client": "^2.0.0",
