--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/nelioyann/front-stories#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.12"
+    "@11ty/eleventy": "^2.0.0-canary.12",
+    "@11ty/eleventy-navigation": "^0.3.4"
   },
   "dependencies": {
     "@notionhq/client": "^2.0.0",
