--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/nelioyann/front-stories#readme",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0-canary.12",
-    "@11ty/eleventy-navigation": "^0.3.4"
+    "@11ty/eleventy-navigation": "^0.3.4",
+    "@11ty/eleventy-plugin-rss": "^1.2.0"
   },
   "dependencies": {
     "@11tyrocks/eleventy-plugin-emoji-readtime": "^1.0.1",
