--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0"
   },
   "dependencies": {
+    "@11ty/eleventy-img": "^2.0.1",
     "@11tyrocks/eleventy-plugin-emoji-readtime": "^1.0.1",
     "@notionhq/client": "^2.0.0",
     "dotenv": "^16.0.1",
