--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "eleventy --serve",
-    "eleventy:dev": "set ELEVENTY_ENV=development & eleventy --serve & evaluatory --sitemap http://localhost:8080/sitemap.xml",
-    "evaluate:dev": "evaluatory --sitemap http://localhost:8080/sitemap.xml"
+    "start:dev": "set ELEVENTY_ENV=development & eleventy --serve",
+    "a11ty": "evaluatory --sitemap http://localhost:8080/sitemap.xml"
   },
   "repository": {
     "type": "git",
