--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@notionhq/client": "^2.0.0",
     "dotenv": "^16.0.1",
     "evaluatory": "^2.3.1",
+    "html-minifier": "^4.0.0",
     "qrcode": "^1.5.1"
   }
 }
