--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "eleventy --serve",
     "start:dev": "set ELEVENTY_ENV=development & eleventy --serve",
     "a11y": "evaluatory --sitemap http://localhost:8080/sitemap.xml",
-    "notion": "node ./notion.js"
+    "notion": "node ./notion.js",
+    "test": "node -v"
   },
   "repository": {
     "type": "git",
