ci: 👷 Add workflow for fetching Notion data
Work in progress

--- a/.github/workflows/fetchFromNotion.yml
+++ b/.github/workflows/fetchFromNotion.yml
@@ -1,11 +1,7 @@
 name: Automated Data Fetching
 
 on:
-  push:
-      branches:
-      - main
-      - develop
-
+  workflow_dispatch
 jobs:
   test_version:
     runs-on: ubuntu-latest
