--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.0.1",
     "evaluatory": "^2.3.1",
     "html-minifier": "^4.0.0",
+    "notion-to-md": "^2.5.5",
     "qrcode": "^1.5.1"
   }
 }
