--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/nelioyann/front-stories#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.12",
+    "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-navigation": "^0.3.4",
     "@11ty/eleventy-plugin-rss": "^1.2.0"
   },
