--- a/.github/workflows/fetchv3.yml
+++ b/.github/workflows/fetchv3.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Fetch data
         run: |
           npm install
-          node dummyFetch.js
+          node notion.js
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
