--- a/.github/workflows/dailyNotionFetch.yml
+++ b/.github/workflows/dailyNotionFetch.yml
@@ -1,6 +1,7 @@
 name: Fetch and Create Pull Request
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *' # Run every day at midnight (UTC)
 
